--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,7 +15,7 @@
             width: 320px;
             line-height: 26px;
             overflow: hidden;
-            text-overflow:ellipsis;
+            text-overflow: ellipsis;
             white-space: nowrap;
         }
 
@@ -57,6 +57,7 @@
         <td>名称</td>
         <td>大小</td>
         <td>修改日期</td>
+        <td>操作</td>
     </tr>
     <tr v-for="file in files">
         <td>
@@ -66,6 +67,7 @@
         </td>
         <td v-text="change(file.length)"></td>
         <td v-text="formatDateTime(file.lastModified)"></td>
+        <td><a href="javascript:;" @click="remove(file.path)" style="padding-left: 0">删除</a></td>
     </tr>
 </table>
 <script src="js/vue.js"></script>
@@ -151,7 +153,7 @@
                         }
                     })
                     .catch(function (error) {
-                        alert("上传失败");
+                        alert("服务器异常");
                     });
             },
             newFolder: function (path) {
@@ -163,7 +165,22 @@
                     .then(function (response) {
                         if (response.data.code == 1) {
                             table.refresh(path);
+                            document.getElementById("file").value = "";
                         }
+                    })
+                    .catch(function (error) {
+                        alert("服务器异常");
+                    });
+            },
+            remove:function (path) {
+                axios.get('/delete?path=' + path)
+                    .then(function (response) {
+                        if (response.data.code == 1) {
+                            table.refresh(table.path);
+                        }
+                    })
+                    .catch(function (error) {
+                        alert("服务器异常");
                     });
             }
         },
