--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -46,6 +46,7 @@
             <button @click="upload()">上传</button>
             <input type="text" name="folderName" id="folderName" style="width: 120px">
             <button @click="newFolder(path)">新建文件夹</button>
+            <span style="color: #666">(* 文件名或文件夹不要有空格)</span>
         </td>
     </tr>
     <tr>
