--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -43,7 +43,7 @@
         <td colspan="3" style="border-bottom: 1px solid #000;padding: 10px 0;">
             <input type="file" name="file" id="file" style="display: none" @change="doUpload(path)">
             <span class="title">文件列表</span>
-            <button @click="upload()">上传</button>
+            <button @click="upload()" id="uploadBtn">上传</button>
             <button @click="newFolder(path)">新建文件夹</button>
             <span style="color: #666">(* 文件名或文件夹不要有空格)</span>
         </td>
@@ -138,30 +138,55 @@
                 return year + "-" + month + "-" + day + " " + hour + ":" + minute + ":" + second;
             },
             upload: function () {
-                document.getElementById("file").click();
+                var uploadBtn = document.getElementById("uploadBtn");
+                if (uploadBtn.innerHTML === "上传") {
+                    document.getElementById("file").click();
+                }
             },
+            /**
+             * 上传文件
+             * @param path
+             */
             doUpload: function (path) {
                 var param = new FormData();
                 param.append("path", path);
                 param.append("file", document.getElementById("file").files[0]);
-                axios.post('/upload', param, {headers: {"Content-Type": "multipart/form-data"}}).then(
-                    function (response) {
-                        if (response.data.code == 1) {
+                // 发送请求
+                var xhr = new XMLHttpRequest();
+                xhr.open('post', '/upload', true);
+                xhr.upload.onprogress = function (ev) {
+                    var percent = 0;
+                    if (ev.lengthComputable) {
+                        percent = Math.round(100 * ev.loaded / ev.total);
+                        var uploadBtn = document.getElementById("uploadBtn");
+                        uploadBtn.innerHTML = percent + "%";
+                        if (percent === 100) {
+                            uploadBtn.innerHTML = "上传";
+                        }
+                    }
+                };
+                xhr.onerror = function (ev) {
+                    document.getElementById("uploadBtn").innerHTML = "上传";
+                    alert("服务器异常");
+                };
+                xhr.send(param);
+                xhr.onreadystatechange = function (ev) {
+                    if (xhr.readyState === 4 && xhr.status === 200) {
+                        var data = JSON.parse(xhr.response);
+                        if (data.code == 1) {
                             table.refresh(path);
                         } else {
                             alert("上传失败");
                         }
-                    })
-                    .catch(function (error) {
-                        alert("服务器异常");
-                    });
+                    }
+                };
             },
             newFolder: function (path) {
                 var name = window.prompt("文件夹名称：");
                 if (name == null || typeof name == "undefined") {
                     return false;
                 }
-                axios.get('/new?path=' + path + "/" + name)
+                axios.get('/new?path=' + path + '&name=' + name)
                     .then(function (response) {
                         if (response.data.code == 1) {
                             table.refresh(path);
