--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -38,7 +38,7 @@
     </style>
 </head>
 <body>
-<table id="list">
+<table id="fileList">
     <tr>
         <td colspan="3" style="border-bottom: 1px solid #000;padding: 10px 0;">
             <input type="file" name="file" id="file" style="display: none" @change="doUpload(path)">
@@ -78,46 +78,62 @@
         </td>
     </tr>
 </table>
+<script src="js/jquery.js"></script>
 <script src="js/vue.js"></script>
 <script src="js/axios.min.js"></script>
 <script>
-    var table = new Vue({
-        el: "#list",
+    var fileList = new Vue({
+        el: "#fileList",
         data: {
             path: "",
             files: []
         },
         methods: {
+            /**
+             * 加载列表
+             */
             loadList: function (path, name) {
                 axios.get('/list?path=' + path + '&name=' + name)
                     .then(function (response) {
                         //console.log(response);
                         if (response.data.code == 1) {
-                            table.path = response.data.data.path;
-                            table.files = response.data.data.list;
+                            fileList.path = response.data.data.path;
+                            fileList.files = response.data.data.list;
                         }
                     });
             },
+            /**
+             * 跳转
+             */
             goto: function (isDirectory, path) {
                 if (isDirectory) {
-                    table.loadList(path, "");
+                    fileList.loadList(path, "");
                 } else {
                     window.location.href = "/download?path=" + path;
                 }
             },
+            /**
+             * 返回上一层
+             */
             back: function (path) {
                 axios.get('/back?path=' + path)
                     .then(function (response) {
                         //console.log(response);
                         if (response.data.code == 1) {
-                            table.path = response.data.data.path;
-                            table.files = response.data.data.list;
+                            fileList.path = response.data.data.path;
+                            fileList.files = response.data.data.list;
                         }
                     });
             },
+            /**
+             * 刷新
+             */
             refresh: function (path) {
-                table.goto(true, path);
+                fileList.goto(true, path);
             },
+            /**
+             * 格式化文件大小
+             */
             change: function (limit) {
                 var size = "";
                 if (limit < 0.1 * 1024) {                            //小于0.1KB，则转化成B
@@ -138,6 +154,9 @@
                 }
                 return size;
             },
+            /**
+             * 格式化时间
+             */
             formatDateTime: function (time) {
                 var date = new Date(time);
                 var year = date.getFullYear();  //取得4位数的年份
@@ -162,7 +181,7 @@
                 var fileInput = document.getElementById("file");
                 var flag = true;
                 // 判断强制覆盖
-                table.files.forEach(function (f) {
+                fileList.files.forEach(function (f) {
                     if (f.name === fileInput.files[0].name && !window.confirm("文件已上传，是否强制覆盖?")) {
                         flag = false;
                         return false;
@@ -195,7 +214,7 @@
                         if (xhr.readyState === 4 && xhr.status === 200) {
                             var data = JSON.parse(xhr.response);
                             if (data.code == 1) {
-                                table.refresh(path);
+                                fileList.refresh(path);
                             } else {
                                 alert("上传失败");
                             }
@@ -206,27 +225,44 @@
                     };
                 }
             },
+            /**
+             * 新建文件夹
+             */
             newFolder: function (path) {
                 var name = window.prompt("文件夹名称：");
                 if (name == null || typeof name == "undefined") {
                     return false;
                 }
-                axios.get('/new?path=' + path + '&name=' + name)
-                    .then(function (response) {
-                        if (response.data.code == 1) {
-                            table.refresh(path);
-                        }
-                    })
-                    .catch(function (error) {
-                        alert("服务器异常");
-                    });
+                // 判断文件夹是否重复
+                var bool = true;
+                $.each(fileList.files, function (index, item) {
+                    if (name == item.name) {
+                        alert("文件夹已存在");
+                        bool = false;
+                        return false;
+                    }
+                });
+                if (bool) {
+                    axios.get('/new?path=' + path + '&name=' + name)
+                        .then(function (response) {
+                            if (response.data.code == 1) {
+                                fileList.refresh(path);
+                            }
+                        })
+                        .catch(function (error) {
+                            alert("服务器异常");
+                        });
+                }
             },
+            /**
+             * 删除文件
+             */
             remove: function (path) {
                 if (window.confirm("危险操作，是否继续？")) {
                     axios.get('/delete?path=' + path)
                         .then(function (response) {
                             if (response.data.code == 1) {
-                                table.refresh(table.path);
+                                fileList.refresh(fileList.path);
                             }
                         })
                         .catch(function (error) {
@@ -239,7 +275,7 @@
              */
             searchFile: function () {
                 var searchName = document.getElementById("searchName").value;
-                table.loadList(table.path, searchName);
+                fileList.loadList(fileList.path, searchName);
             },
             /**
              * 修改目录或文件
@@ -247,13 +283,24 @@
              * @param name
              */
             rename: function (path, name) {
-                console.log(path, name);
-                var newName = window.prompt("目录或文件名称：",name);
-                if (newName != null && typeof newName != "undefined") {
+                var newName = window.prompt("目录或文件名称：", name);
+                if (newName == null || typeof newName == "undefined" || newName == name) {
+                    return false;
+                }
+                // 判断文件夹是否重复
+                var bool = true;
+                $.each(fileList.files, function (index, item) {
+                    if (newName == item.name) {
+                        alert("文件夹已存在");
+                        bool = false;
+                        return false;
+                    }
+                });
+                if (bool) {
                     axios.get('/rename?path=' + path + '&oldName=' + name + '&newName=' + newName)
                         .then(function (response) {
                             if (response.data.code == 1) {
-                                table.refresh(path);
+                                fileList.refresh(path);
                             }
                         });
                 }
@@ -264,8 +311,8 @@
                 .then(function (response) {
                     //console.log(response);
                     if (response.data.code == 1) {
-                        table.path = response.data.data.path;
-                        table.files = response.data.data.list;
+                        fileList.path = response.data.data.path;
+                        fileList.files = response.data.data.list;
                     }
                 });
         }
