--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -45,7 +45,7 @@
             <span class="title">文件列表</span>
             <button @click="upload()" id="uploadBtn">上传</button>
             <button @click="newFolder(path)">新建文件夹</button>
-            <span style="color: #666">(* 文件名或文件夹不能包含空格，单个文件最大上传10G)</span>
+            <span style="color: #666">(* 文件名或文件夹不要有空格，单个文件最大上传10G)</span>
         </td>
     </tr>
     <tr>
